--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "hello-react-motoko",
+  "name": "web3r_chat",
   "version": "0.1.0",
-  "description": "A React + Motoko example for the internet computer",
+  "description": "web3r.chat - Chatbots for the internet computer",
   "keywords": [
+    "web3r.chat",
+    "Chatbot",
     "Internet Computer",
     "Motoko",
     "JavaScript",
-    "React"
+    "TensorFlow",
+    "Canister"
   ],
   "scripts": {
     "format:write": "prettier --ignore-path .eslintignore --write .",
@@ -21,14 +24,15 @@
     "copy:types": "rsync -avr .dfx/$(echo ${DFX_NETWORK:-'**'})/canisters/** --exclude='assets/' --exclude='idl/' --exclude='*.wasm' --delete src/declarations"
   },
   "devDependencies": {
-    "@dfinity/agent": "0.10.1",
-    "@dfinity/candid": "0.10.1",
-    "@dfinity/principal": "0.10.1",
+    "@dfinity/agent": "^0.10.3",
+    "@dfinity/candid": "0.10.3",
+    "@dfinity/principal": "^0.10.3",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
     "assert": "2.0.0",
     "buffer": "6.0.3",
     "copy-webpack-plugin": "^9.0.1",
+    "cors": "^2.8.5",
     "css-loader": "^6.5.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
@@ -38,6 +42,7 @@
     "eslint-plugin-promise": "^5.2.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "events": "3.3.0",
+    "express": "^4.17.3",
     "html-webpack-plugin": "5.5.0",
     "prettier": "2.5.1",
     "process": "0.11.10",
@@ -58,6 +63,9 @@
     "last 2 edge version"
   ],
   "dependencies": {
+    "@dfinity/auth-client": "^0.10.3",
+    "@dfinity/authentication": "^0.10.3",
+    "@dfinity/identity": "^0.10.3",
     "@dracula/dracula-ui": "^0.8.1",
     "@popperjs/core": "^2.11.0",
     "bootstrap": "^5.1.3",
